--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/wantedlex/DemoNPM#readme",
   "dependencies": {
+    "jquery": "^3.3.1",
     "moment": "^2.20.1"
   }
 }
