--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "moment": "^2.20.1"
+  },
+  "devDependencies": {
+    "logmon": "0.0.1"
   }
 }
